snapshots/kubernetes/network/snapshot_v0.1/sources/fixtures/fail/case-003-ingress-empty-host/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: net-ingress
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: net-pass
                port:
                  number: 80
